--- a/app_python/pyproject.toml
+++ b/app_python/pyproject.toml
@@ -10,6 +10,7 @@ falcon = "^3.0.1"
 uWSGI = "^2.0.19"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
