ensure docker best practices

--- a/app_python/Dockerfile
+++ b/app_python/Dockerfile
@@ -1,18 +1,26 @@
 FROM python:3.9 as depmanager
 ARG POETRY_VERSION=1.1.8
-RUN pip install poetry==$POETRY_VERSION
+RUN pip install --no-cache-dir poetry==$POETRY_VERSION
+WORKDIR /dependencies
 COPY pyproject.toml .
 COPY poetry.lock .
-RUN /bin/sh -c 'poetry export -f requirements.txt -o requirements.txt'
+RUN poetry export -f requirements.txt -o requirements.txt
 
 
 FROM python:3.9-alpine as build
 ENV PYTHONFAULTHANDLER=1 \
     PYTHONHASHSEED=random \
     PYTHONUNBUFFERED=1
+
 WORKDIR /app
-RUN apk add --no-cache gcc build-base linux-headers
-COPY --from=depmanager requirements.txt .
-RUN pip install -r requirements.txt
+RUN adduser -D falcon
+
+COPY --from=depmanager /dependencies/requirements.txt .
+# installing uWSGI as binary saves about 120MB
+RUN apk add --no-cache uwsgi=2.0.19.1-r2 && \
+    pip install --no-cache-dir -r requirements.txt --prefer-binary --compile
+
+USER falcon
 COPY . .
-CMD python main.py
+EXPOSE 8000
+CMD ["python", "main.py"]
