--- a/app_python/pyproject.toml
+++ b/app_python/pyproject.toml
@@ -11,6 +11,7 @@ falcon = "^3.0.1"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
 uWSGI = "^2.0.19"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
