Continue job on linter error

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,7 @@ jobs:
           poetry install
         
       - name: Run linter
+        continue-on-error: true
         run: |
           cd app_python
           poetry run flake8
