--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           path: |
             app_python/__pycache__
             app_python/.pytest_cache
-          key: ${{ runner.os }}-${{ hashFiles('app_python/') }}
+          key: ${{ runner.os }}-${{ github.ref }}-pycache
 
       - name: Setup Python
         uses: actions/setup-python@v2.2.2
@@ -65,6 +65,12 @@ jobs:
         
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Restore cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: /var/lib/docker
+          key: ${{ runner.os }}-${{ github.ref }}-docker
         
       - name: Docker login
         uses: docker/login-action@v1.10.0
