--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,8 +25,10 @@ jobs:
           path: |
             app_python/__pycache__
             app_python/.pytest_cache
-          key: ${{ runner.os }}-${{ github.ref }}-pycache
-
+          key: ${{ runner.os }}-pycache-${{ hashFiles('app_python/**.py') }}
+          restore-keys: |
+            ${{ runner.os }}-pycache
+          
       - name: Setup Python
         uses: actions/setup-python@v2.2.2
         with:
@@ -70,7 +72,9 @@ jobs:
         uses: actions/cache@v2.1.6
         with:
           path: /var/lib/docker
-          key: ${{ runner.os }}-${{ github.ref }}-docker
+          key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
+          restore-keys: |
+            ${{ runeer.os }}-docker
         
       - name: Docker login
         uses: docker/login-action@v1.10.0
