--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,7 +74,7 @@ jobs:
           path: /var/lib/docker
           key: ${{ runner.os }}-docker-${{ hashFiles('Dockerfile') }}
           restore-keys: |
-            ${{ runeer.os }}-docker
+            ${{ runner.os }}-docker
         
       - name: Docker login
         uses: docker/login-action@v1.10.0
