--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,7 @@ jobs:
         continue-on-error: true
         run: |
           cd app_python
-          echo ::add-matcher::flake8_matcher.json
+          echo ::add-matcher::.github/flake8_matcher.json
           poetry run flake8
         
       - name: Run tests
