--- a/ansible/playbooks/playbook.yaml
+++ b/ansible/playbooks/playbook.yaml
@@ -1,16 +1,7 @@
 ---
-- hosts: all
-  gather_facts: false
+- name: Docker install
+  hosts: all
+  become: true
 
   roles:
-    - role: docker_ubuntu
-
-  tasks:
-    - name: Create and start services
-      community.docker.docker_compose:
-        pull: yes
-        project_src: ../app_python/docker-compose.yaml
-      register: output
-
-    - ansible.builtin.debug:
-        var: output
+    - role: '../roles/docker_ubuntu'
