--- a/ansible/roles/docker_ubuntu/tasks/prerequisites.yaml
+++ b/ansible/roles/docker_ubuntu/tasks/prerequisites.yaml
@@ -13,6 +13,12 @@
       - ca-certificates
     state: present
 
+- name: Ensure pip is installed
+  apt:
+    name: python3-pip
+    state: latest
+    update_cache: yes
+
 - name: Ensure additional dependencies are installed (on Ubuntu < 20.04 and any other systems).
   apt:
     name: gnupg2
