--- a/ansible/roles/docker_ubuntu/tasks/prerequisites.yaml
+++ b/ansible/roles/docker_ubuntu/tasks/prerequisites.yaml
@@ -14,10 +14,11 @@
     state: present
 
 - name: Ensure pip is installed
+  become: true
   apt:
     name: python3-pip
     state: latest
-    update_cache: yes
+    update_cache: true
 
 - name: Ensure additional dependencies are installed (on Ubuntu < 20.04 and any other systems).
   apt:
