--- a/monitoring/docker-compose.yaml
+++ b/monitoring/docker-compose.yaml
@@ -37,5 +37,19 @@ services:
     logging:
       driver: "json-file"
       options:
-        tag:
-          "{{.ImageName}}|{{.Name}}"
+        tag: "{{.ImageName}}|{{.Name}}"
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    volumes:
+      - ./prometheus/config.yml:/etc/prometheus/config.yml
+    networks:
+      - loki
+    logging:
+      driver: "json-file"
+      options:
+        tag: "{{.ImageName}}|{{.Name}}"
