--- a/monitoring/docker-compose.yaml
+++ b/monitoring/docker-compose.yaml
@@ -3,6 +3,21 @@ version: "3"
 networks:
   loki:
 
+x-logging:
+  &default-logging
+  driver: "json-file"
+  options:
+    tag: "{{.ImageName}}|{{.Name}}"
+    max-file: "5"
+    max-size: "10m"
+
+x-deploy:
+  &deploy
+  resources:
+    limits:
+      memory: "512M"
+
+
 services:
   loki:
     image: grafana/loki:2.3.0
@@ -11,6 +26,8 @@ services:
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - loki
+    logging: *default-logging
+    deploy: *deploy
 
   promtail:
     image: grafana/promtail:2.3.0
@@ -20,6 +37,8 @@ services:
     command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
+    logging: *default-logging
+    deploy: *deploy
 
   grafana:
     image: grafana/grafana:latest
@@ -27,6 +46,8 @@ services:
       - "3000:3000"
     networks:
       - loki
+    logging: *default-logging
+    deploy: *deploy
 
   app:
     image: bulbawarrior/falcon:latest
@@ -34,12 +55,8 @@ services:
       - "80:8000"
     networks:
       - loki
-    logging:
-      driver: "json-file"
-      options:
-        tag: "{{.ImageName}}|{{.Name}}"
-        max-file: "5"
-        max-size: "10m"
+    logging: *default-logging
+    deploy: *deploy
 
   prometheus:
     image: prom/prometheus:latest
@@ -51,9 +68,5 @@ services:
       - ./prometheus/config.yml:/etc/prometheus/config.yml
     networks:
       - loki
-    logging:
-      driver: "json-file"
-      options:
-        tag: "{{.ImageName}}|{{.Name}}"
-        max-file: "5"
-        max-size: "10m"
+    logging: *default-logging
+    deploy: *deploy
