--- a/k8s/falcon/templates/deployment.yaml
+++ b/k8s/falcon/templates/deployment.yaml
@@ -45,6 +45,12 @@ spec:
             httpGet:
               path: /
               port: http
+          env:
+            - name: MY_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "falcon.fullname" . }}
+                  key: password
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
