--- a/app_python/docker-compose.yaml
+++ b/app_python/docker-compose.yaml
@@ -1,6 +1,8 @@
 services:
   app:
     build: .
-    image: pyapp
+    image: falcon
     ports:
       - 80:8000
+    volumes:
+      - ./media:/app/media
